fix footer alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,6 +146,7 @@ hr {
   .copyright {
     float: left;
     font-size: .9em;
+    padding: 1.2em 0;
     margin: 0;
     color: $border;
   }
